fix name overflow

--- a/src/components/organisation/style.module.scss
+++ b/src/components/organisation/style.module.scss
@@ -16,7 +16,14 @@
 .name {
   font-size: 1.125rem;
   margin-bottom: 0;
-  grid-column: 1/-1;
+
+  @media (min-width: 600px) {
+    max-width: 70%;
+  }
+
+  @media (min-width: 1000px) {
+    max-width: 75%;
+  }
 }
 
 .areas-covered {
